RESOLVED FIXED155958
When moving focus from one select element to another (iPhone) the value is committed to the newly focused element
https://bugs.webkit.org/show_bug.cgi?id=155958
Summary When moving focus from one select element to another (iPhone) the value is co...
Enrica Casucci
Reported 2016-03-28 15:39:22 PDT
Steps to Reproduce: 1. Open https://jsfiddle.net/hstangl/pJgyu/39413/embedded/result/ on iOS Safari 2. Tap on the first select field, reading "3" 3. Directly tap on the second select field, reading "A" Expected Results: Safari should show the correct values for each of the select fields, without changing them without user interaction. Actual Results: After tapping on the first select field, the option picker comes up with "3" selected (good). After tapping on the second select field, the option picker comes up with "A" shown as selected on the option picker (good), but "C" shown on the web page and actually being set on the form field (bad). This happens only on iPhone where select elements use the picker wheel and the value is only committed when losing focus. It works correctly when moving focus using the arrow keys. rdar://problem/22738524
Attachments
Patch (2.40 KB, patch)
2016-03-28 15:47 PDT, Enrica Casucci
thorton: review+
Enrica Casucci
Comment 1 2016-03-28 15:47:22 PDT
Enrica Casucci
Comment 2 2016-03-29 16:35:16 PDT
Committed revision 198810.
Note You need to log in before you can comment on or make changes to this bug.